--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
             <!--Cloud Stack Links-->
             <h2>Cloud Stack Links</h2>
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://execassistantsrecruitment.github.io/How-a-Virtual-Executive-Assistants-Increases-Productivity/">https://execassistantsrecruitment.github.io/How-a-Virtual-Executive-Assistants-Increases-Productivity/</a><br>
+                <a target="_bLank" href="https://madsstacks.s3.us-east-005.backblazeb2.com/How+a+Virtual+Executive+Assistants+Increases+Productivity/index.html">https://madsstacks.s3.us-east-005.backblazeb2.com/How+a+Virtual+Executive+Assistants+Increases+Productivity/index.html</a><br>
+                <a target="_bLank" href="https://aesthetic-raindrop-644911.netlify.app/">https://aesthetic-raindrop-644911.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
